--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
     person("Laboratorio de Desigualadad Socioeconómica Regional", "DeSERLab", role="cph" )
            )
 Maintainer: Marco Antonio Pérez-Méndez <mperez.mendez@izt.uam.mx>
-Description: Download mexican economic census for several years (2004, 2009, 2014 and 2019) and all federal entities. Filter the census data table by municipal data and build a data.frame for all federal entities and several years.
+Description: Download Mexican economic census for several years (2004, 2009, 2014 and 2019) and all federal entities. Filter the census data table by municipal data and build a data.frame for all federal entities and several years.
 License: GPL-2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
